# ConsoleGraphics

./: .gitignore  CG.h  CMakeLists.txt  ColorCodes.cpp  ColorCodes.hpp  Image.cpp  Image.hpp  LICENSE  Makefile  README.md  TestCase.cpp  TestCase.hpp  example.cpp  examples.cpp  index.html  main.cpp  pngTo.cpp  test.cpp  tests.cpp
CG/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  CG_Animator.cpp  CG_Animator.hpp  CG_Image.cpp  CG_Image.hpp  CMakeLists.txt  Color.cpp  Color.hpp  ColorCodes.cpp  ColorCodes.hpp  ConsoleImage.cpp  ConsoleImage.hpp  Glyph.cpp  Glyph.hpp  Glyphs.cpp  Glyphs.hpp  Image.cpp  Image.hpp
CG/Animations/: Bouncingball.hpp  Rainbow.hpp  animations.cpp
CG/include/: CG.h
CG/include/ConsoleGraphics/: Image.h  Vector.h
CG/src/: Ansi.cpp  Image.cpp
CGApp/: CMakeLists.txt  example.cpp
CGTest/: CMakeLists.txt  Testcase.cpp  Testcase.h  test.cpp
CGTest/ExpectedImages/: clamp_rect.diff.txt  match_elip.expected.txt  match_rect.diff.txt  match_rectline.expected.txt
CI/: ColorCodes.hpp  ConsoleImage.cpp  ConsoleImage.hpp
Tests/: TestCase.cpp  TestCase.hpp  Testcase.cpp  Testcase.h  tests.cpp
Tests/ExpectedImages/: clamp_rect.expected.txt  match_circ.expected.txt  match_elip.expected.txt  match_line.expected.txt  match_mult_lines.expected.txt  match_rect.expected.txt  match_rectline.expected.txt  test_transparency.expected.txt
include/: Ansi.h  Ansi_codes.h  Color.h  Font.h  Image.h  Math.h  Vector.h
src/: Ansi.cpp  Ansi_codes.cpp  Image.cpp  examples.cpp  pngTo.cpp  tests.cpp
web/: image_list.txt  index.css  index.html  index.js
web/Images/: dots.txt  font_render.txt  gradient_circle.txt  gradient_square.txt  line_bezier.txt  rainbow_square.txt  rainbow_tri.txt  transparent_circle.txt
